[metadata]
name = renderer
version = 0.3.2
author = Wilbert Santos Pumacay Huallpa
author_email = wpumacay@gmail.com
description = A minimal renderer for prototyping 3D applications
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
url = https://github.com/wpumacay/loco_renderer
keywords = graphics opengl
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
zip_safe = False
packages = find:
package_dir = =python
python_requires = >=3.7

[options.packages.find]
where = python

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs,
    venv

max-line-length = 80
