[metadata]
name = wp-renderer
version = 0.3.3
author = Wilbert Santos Pumacay Huallpa
author_email = wpumacay@gmail.com
description = A minimal renderer for prototyping 3D applications
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
url = https://github.com/wpumacay/renderer
keywords = graphics opengl
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
packages = find:
package_dir = =python
python_requires = >=3.7

[options.packages.find]
where = python

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs,
    venv

max-line-length = 80
